--- a/index.html
+++ b/index.html
@@ -59,9 +59,7 @@
     <main class="main">
       <section class="section hero">
         <div class="container hero-container">
-          <h1 class="main-title">
-            Effective Solutions <br />for Your Business
-          </h1>
+          <h1 class="hero-title main-title">Effective Solutions for Your Business</h1>
           <button class="order-button" type="button">Order Service</button>
         </div>
       </section>
